# schemachange

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-src  LEGAL.md  NOTICE  README.md  SECURITY.md  TEST.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  azure-pipelines.yml  logo.xcf  poetry.toml  populateConnection.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  snowchange.py  testSchemachange.sh  testSchemchange.sh  test_deploy.sh  test_execute_string.py  tox.ini
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question-or-clarification.md
.github/workflows/: DeployMasking.yml  DeployOnPush.yml  auto-label-issues.yml  auto-label-prs.yml  community-pr-helper.yml  dev-pytest.yml  master-pytest.yml  pr-init.yml  pytest.yml  python-package.yml  python-publish.yml  rc-pytest.yml  remove-awaiting-response.yml  snowflake-devops-demo.yml  stale.yml  test.yml
demo/: README.MD  schemachange-config-setup.yml  schemachange-config-teardown.yml  schemachange-config-v1-example.yml  schemachange-config-v2-dev.yml  schemachange-config-v2-example.yml
demo/basics/: schemachange-config.yml
demo/basics_demo/: A__render.sql  R__render.sql  V1.0.1__EOF_FIle.sql  V1.0.2__StoredProc.sql  schemachange-config.yml
demo/citibike/: R__checks.sql  U1.2__load_tables_from_s3.sql  V1.1__initial_database_objects.sql  V1.2__load_tables_from_s3.sql  schemachange-config.yml
demo/citibike_demo/: R__checks.sql  V1.1.0__initial_database_objects.sql  V1.2.0__load_tables_from_s3.sql  schemachange-config.yml
demo/citibike_demo_jinja/: V1.1.0__initial_database_objects.sql  V1.2.0__load_tables_from_s3.sql  schemachange-config.yml
demo/citibike_demo_jinja_data_injection/: README.md  test_template.sql
demo/citibike_jinja/: schemachange-config.yml
demo/citibike_jinja_env/: V1.1__initial_database_objects.sql  V1.2__load_tables_from_s3.sql
demo/examples/: QUICKSTART.md  README.md  keypair_auth_example.sh  password_auth_example.sh  pat_auth_example.sh  sso_auth_example.sh
demo/provision/: initialize.sql  setup_schemachange_schema.sql
demo/setup/: basics_demo.sql  setup_basics_demo.sql
demo/teardown/: basics_demo.sql  teardown_basics_demo.sql  teardown_citibike_demo.sql  teardown_citibike_demo_jinja.sql
docs/: README.md
docs/maintainers/: DISCUSSION_CATEGORIES.md  GITHUB_MANAGEMENT_WITHOUT_PROJECTS.md  MILESTONE_SETUP.md  PROJECT_SETUP.md  QUICK_START.md  README.md  REPOSITORY_ECOSYSTEM.md  ROADMAP_ISSUE_TEMPLATE.md
experiments/: README.md
images/: logo.xcf
sc-zeus/000_DB/: V1.1.1__Database_and_schema.sql
schemachange/: Config.py  JinjaEnvVar.py  JinjaTemplateProcessor.py  LocalDataInjection.py  Run_Script.bat  ScriptExecutionError.py  SecretManager.py  SnowflakeSchemachangeSession.py  __init__.py  cli.py  deploy.py  extract_config_secrets.py  get_all_scripts_recursively.py  get_schemachange_config.py  get_yaml_config.py  load_schemachange_config.py  parse_args.py  parse_cli_args.py  redact_config_secrets.py  render.py  sql_splitter.py  utils.py
schemachange/config/: BaseConfig.py  ChangeHistoryTable.py  ChecksumChangedAction.py  DeployConfig.py  RenderConfig.py  VerifyConfig.py  get_merged_config.py  parameter_mapping.py  parse_cli_args.py  utils.py
schemachange/session/: Credential.py  HistorySession.py  Script.py  SnowflakeSession.py  utils.py
snowchange/: cli.py
tests/: test_Config.py  test_JinjaEnvVar.py  test_JinjaTemplateProcessor.py  test_LocalDataInjection.py  test_ScriptExecutionError.py  test_SecretManager.py  test_SnowflakeSchemachangeSession.py  test_checksum_changed_action.py  test_cli_misc.py  test_config.py  test_deploy.py  test_deploy_command.py  test_deploy_continue_on_error.py  test_extract_config_secrets.py  test_get_all_scripts_recursively.py  test_get_change_history_table_details.py  test_get_schemachange_config.py  test_get_yaml_config.py  test_issue388_passphrase_exposure.py  test_issue_401_pat_exposure.py  test_jinja_env_config_template.py  test_jinja_env_var_template.py  test_jinja_from_environ_filter.py  test_load_schemachange_config.py  test_main.py  test_no_color.py  test_parse_args.py  test_parse_cli_args.py  test_private_key_passphrase_redaction.py  test_redact_config_secrets.py  test_redact_config_vars.py  test_sql_splitter.py  test_verify_deploy_auth_equivalence.py
tests/assets/: schemachange-config-complete.yml
tests/config/: alt-connections.toml  alt_private_key.txt  connections.toml  oauth_token_path.txt  private_key.txt  schemachange-config-full-no-connection.yml  schemachange-config-full.yml  schemachange-config-partial-with-connection.yml  schemachange-config-with-missing-connection-file.yml  schemachange-config.yml  test_ChangeHistoryTable.py  test_Config.py  test_DeployConfig.py  test_RenderConfig.py  test_VerifyConfig.py  test_connections_toml_private_key_loading.py  test_edge_cases.py  test_env_var_expansion.py  test_get_config_secrets.py  test_get_merged_config.py  test_get_yaml_config.py  test_issue388_connections_toml_loading.py  test_parameter_mapping.py  test_parse_cli_args.py  test_short_forms_integration.py  test_utils.py
tests/session/: test_Credential.py  test_HistorySession.py  test_Script.py  test_Script_execution.py  test_SnowflakeSession.py  test_credential.py  test_session_parameters.py  test_snowflake_session_private_key.py  test_uppercase_extensions.py  test_utils.py
tests/test_uppercase_extensions/: A__test_always.SQL  R__test_repeatable.SQL  V1.0.0__test_uppercase.SQL  V2.0.0__mixed_case.Sql
zeus-MaskingPolicy/APPLY/: R__ZEUS_DDM.sql  ZEUS_DDM.sql
zeus-MaskingPolicy/CREATE-ALTER-DROP/: ADDRESS_MASK.sql  BANKACCOUNT_MASK.sql  DOB_MASK.sql  DOB_MASK_DT.sql  DOB_MASK_STR.sql  DON_MASK_NTZ.sql  DRIVERICENSE_MASK.sql  EMAIL_MASK.sql  LAST4_SSN_MASK.sql  MASK_SBT_JSON.sql  NAME_MASK.sql  PHONE_MASK.sql  R__ADDRESS_MASK.sql  R__BANKACCOUNT_MASK.sql  R__DOB_MASK_DT.sql  R__DOB_MASK_NTZ.sql  R__DOB_MASK_STR.sql  R__DRIVERICENSE_MASK.sql  (+8 more)
(+61 files in other folders)
