[metadata]
name = schemachange
version = 3.6.0
description = A Database Change Management tool for Snowflake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snowflake-Labs/schemachange
author = jamesweakley/jeremiahhansen
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = schemachange
install_requires =
    jinja2~=3.0
    pandas~=1.3
    pyyaml~=6.0
    snowflake-connector-python>=2.8,<4.0
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    schemachange = schemachange.cli:main

[options.extras_require]
dev =
    pytest
