[metadata]
name = schemachange
version = 4.1.0
description = A Database Change Management tool for Snowflake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snowflake-Labs/schemachange
author = jamesweakley/jeremiahhansen
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    schemachange
    schemachange.config
    schemachange.session
install_requires =
    cryptography
    jinja2~=3.0
    pyyaml~=6.0
    requests
    snowflake-connector-python>=2.8,<4.0
    structlog~=24.1.0
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    schemachange = schemachange.cli:main

[options.extras_require]
dev =
    black
    flake8
    pre-commit
    pyfakefs
    pytest

[options.package_data]
schemachange = py.typed
